welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:8: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
			piste=isFacingTrail();
                                           ^